# murmur

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SCRATCHPAD.md  install.sh  release.sh  setup-windows.ps1  uninstall.sh
.cargo/: config.toml
docs/: index.html
src/: app.rs  audio.rs  config.rs  downloader.rs  hotkey.rs  languages.rs  main.rs  transcriber.rs  tray.rs
src/platform/: macos.rs  mod.rs  windows.rs
src/transcriber/: fluid_backend.rs  mod.rs  whisper_backend.rs
