[package]
name = "murmur"
version = "0.2.3"
edition = "2024"

[features]
default = []
fluid_audio = ["dep:fluidaudio-rs"]

[dependencies]
tao = "0.34"
tray-icon = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rdev = { git = "https://github.com/fufesou/rdev", branch = "master" }
cpal = "0.15"
whisper-rs = "0.12"
whisper-rs-sys = "0.10"
arboard = "3"
enigo = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", features = ["blocking"] }
fluidaudio-rs = { version = "0.1", optional = true, features = ["asr"] }
